--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -111,7 +111,7 @@
 {{#if session.admin}}
   
 
-  <a href="/dashboard">Dasboard Admin</a>
+  <a href="admin/dashboard">Dasboard Admin</a>
 
 {{else if session.namaSession}}
 
