--- a/views/user/admin/dashboard.html
+++ b/views/user/admin/dashboard.html
@@ -84,7 +84,7 @@
                                             </td>
 
 
-                                              <td id="btn-edit" class="text-center"> <a class="btn btn-raised btn-info" href="/user/{{this.userId}}">Edit</a></td>
+                                              <td id="btn-edit" class="text-center"> <a class="btn btn-raised btn-info" href="/admin/user/{{this.userId}}">Edit</a></td>
                                             <td class="text-center"> <a class="btn btn-raised btn-danger" href="/admin/dashboard/detele/{{this.userId}}">Hapus</a></td>
                                              {{/each}}
 
