--- a/views/user/admin/dashboard.html
+++ b/views/user/admin/dashboard.html
@@ -11,6 +11,7 @@
 
 <a href="/keluar">keluar</a>
 <a href="/">halaman utama</a>
+<a href="/admin/post">halaman utama</a>
 
     <body>
         <div class="container">
