--- a/views/user/admin/detail.html
+++ b/views/user/admin/detail.html
@@ -15,7 +15,7 @@
 
                 <div class="well bs-component col-md-5  col-md-offset-3">
 
-                    <form id="pendaftaran" method="post" class="<col-md-7></col-md-7> col-md-offset-3 form-horizontal" action="/admin/dashboard/update/<%=data.userId%>"
+                    <form id="pendaftaran" method="post" class="<col-md-7></col-md-7> col-md-offset-3 form-horizontal" action="/admin/dashboard/update/{{data.userId}}"
                         ng-controller='controlAdmin'>
 
                         <fieldset>
