--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,24 @@
+ {{> header }}
+
+<div class="posting col-md-6 col-md-offset-1">
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title"> Posingan gan!</h3>
+
+        </div>
+
+        <div class="panel-body">
+            
+            yo yoyoy mamen mamen mamen...... aha yeaaah ! 
+            Saya anak orang ilang yang tinggal dilautan !
+            jangan cari saya kawan!
+
+        </div>
 
 
 
-{{> header }} 
+    </div>
 
-<a href="" class="btn btn-raised">asasaas</a>
+
+</div>
