--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
             
             yo yoyoy mamen mamen mamen...... aha yeaaah ! 
             Saya anak orang ilang yang tinggal dilautan !
-            jangan cari saya kawan!
+            jangan cari saya kawan!aaaaaaaaaaaaa
 
         </div>
 
