--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
             
             yo yoyoy mamen mamen mamen...... aha yeaaah ! 
             Saya anak orang ilang yang tinggal dilautan !
-            jangan cari saya kawan!aaaaaaaaaaaaa
-
+            jangan cari saya kawan!aaaaaaaaaaaaaaaaaaa
+            asdsdsad
         </div>
 
 
