--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,7 @@
             
             yo yoyoy mamen mamen mamen...... aha yeaaah ! 
             Saya anak orang ilang yang tinggal dilautan !
-            jangan cari saya kawan!aaaaaaaaaaaaaaaaaaa
-            asdsdsad
+            jangan cari saya kawan!
         </div>
 
 
