--- a/views/user/admin/addpost.html
+++ b/views/user/admin/addpost.html
@@ -1,37 +1,63 @@
  {{>header}}
 
+<div class="container">
 
-<div class="page-header">
+  <div class="page-header text-left">
 
-  <h1>Edit Posting!</h1>
-
-
-</div>
-
-<div class="row">
-
-  <div class="panelEdit col-md-6 col-md-offset-2">
-
-
-    <div id="editor">
-      <p>Hello World!</p>
-      <p>Some initial <strong>bold</strong> text</p>
-     
-    </div>
+    <h1>Edit Posting!</h1>
 
 
   </div>
 
 
 
-</div>
+  <div class="panelEdit row">
 
+    <div class="well bs-component col-md-8 col-md-offset-1">
+
+      <form method="post" action="/admin/posting">
+
+
+        <div class="form-group">
+
+          <label for="">Judul Posting</label>
+          <br>
+          <div>
+            <input class="form-control" type="" name="" value="">
+
+          </div>
+
+        </div>
+
+
+
+        <div id="editor">
+          <p>Hello World!</p>
+          <p>Some initial <strong>bold</strong> text</p>
+
+        </div>
+
+        <div class="form-group text-right">
+          <button class="btn btn-raised btn-info" type="submit">Masukan Artikel</button>          
+        </div>
+
+      </form>
+
+
+    </div>
+
+  </div>
+
+
+</div>
 
 {{>footer}}
 
 <!-- Initialize Quill editor -->
 <script type="text/javascript">
   var quill = new Quill('#editor', {
+
+    placeholder:"tulis artikel lau! _faisal arkan",
     theme: 'snow'
   });
 </script>
