--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,27 @@
  {{> header }}
 
 <div class="posting col-md-6 col-md-offset-1">
+    {{#each data}}
+    <div id="jarak">
+        <div class="panel panel-info">
+            <div class="panel-heading">
 
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            <h3 class="panel-title"> Posingan gan!</h3>
+
+                <h3 class="panel-title">{{this.judul}}</h3>
+
+            </div>
+
+            <div class="panel-body">
+
+                {{this.artikel}}
+
+            </div>
 
         </div>
 
-        <div class="panel-body">
-            
-            yo yoyoy mamen mamen mamen...... aha yeaaah ! 
-            Saya anak orang ilang yang tinggal dilautan !
-            jangan cari saya kawan!
-        </div>
+        {{/each}}
 
-        
+
 
 
     </div>
