--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -26,9 +26,22 @@
 });
 
 
+
+
   tinymce.init({
-    selector: '#posting'
+    selector: '#posting',
+	 plugins: [
+        "advlist autolink lists link image charmap print preview anchor",
+        "searchreplace visualblocks code fullscreen",
+        "insertdatetime media table contextmenu paste imagetools"
+    ]
+	
+
   });
+
+
+
+
 
 
 </script>
