--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 
 
-<div class="posting col-md-6 col-md-offset-1">
+<div class="posting col-md-8 col-md-offset-1">
     {{#each data}}
     <div id="jarak">
         <div class="panel panel-info">
@@ -33,7 +33,7 @@
 <script>
 $(document).ready(function(){
    
-        $("#artikel").html("Hello <b>world!</b>");
+        // $("#artikel").html("Hello <b>world!</b>");
     
 });
 </script>
