--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -34,6 +34,9 @@
   height: 500,
   resize: false,
   theme: 'modern',
+  force_br_newlines : true,
+        force_p_newlines : false,
+        forced_root_block : '', // Needed for 3.x
   plugins: [
     'advlist autolink lists link image charmap print preview hr anchor pagebreak',
     'searchreplace wordcount visualblocks visualchars code fullscreen',
