--- a/views/dev.html
+++ b/views/dev.html
@@ -36,7 +36,7 @@
 
 
       <div class="form-group text-center">
-        <h1 class="judul"> Login Akun</h1>
+        <h1 class="judul"> Login aaaa</h1>
 
 
       </div>
