--- a/views/user/login.html
+++ b/views/user/login.html
@@ -41,15 +41,15 @@
 
       </div>
 
-      <div class="col-md-11" >
-        <form class="daftar text-center " action="/login" method="post">
+      <div class="col-md-11">
+        <form class="daftar text-center" action="/login" method="post">
 
 
 
 
           <div>
 
-            <div class="form-group ">
+            <div id="ketikEmail"  class="form-group">
 
               <div class="input-group">
                 <span class="input-group-addon">
@@ -63,22 +63,24 @@
 
             </div>
 
-            <div class="form-group">
+            <div  id="ketikPass" class="form-group">
 
-              <div class="input-group">
+              <div  class="input-group">
                 <span class="input-group-addon">
              <i class="material-icons">lock_outline</i>
              </span>
-                <input class="form-control" name="password" placeholder="Masukan Password" type="password" value="">
+                <input  class="form-control" name="password" placeholder="Masukan Password" type="password" value="">
               </div>
 
             </div>
 
-            <div class="form-group">
+            <div id="pesan" class="form-group">
               <a class=" btn btn-raised btn-info btn-md" href="#">Daftar</a>
-              <button class="btn btn-raised btn-primary" type="submit">Masuk</button>
-
+              <a id="login" class="btn btn-raised btn-primary" type="submit">Masuk</a>
+              <label class="control-label" hidden id='error' for="inputError">Isi dengan benar.</label>
             </div>
+
+
 
 
 
@@ -100,3 +102,89 @@
 
 
 {{>footer}}
+
+<script>
+  
+$(document).on("click","#login", function(e){
+
+
+  e.preventDefault();
+  console.log('select_link clicked');
+
+  dataEmail = $('input[name=email]').val();
+  dataPass = $('input[name=password]').val();
+    
+
+   if(($.trim(dataEmail) == '') &&($.trim(dataPass) == '')){
+
+     $('#ketikEmail').addClass('has-error is-empty');
+    
+      $('#ketikPass').addClass('has-error is-empty');
+
+       $('#pesan').addClass('has-error is-empty');
+    
+       $('label').show();
+   
+
+   }else if (($.trim(dataPass) == '') ){
+       $('#ketikPass').addClass('has-error is-empty');
+    
+        $('#pesan').addClass('has-error is-empty');
+
+      $('label').show();
+   
+  
+  }else if (($.trim(dataEmail) == '' ) ){
+  
+   
+     $('#ketikEmail').addClass('has-error is-empty');
+     $('#pesan').addClass('has-error is-empty');
+       $('label').show();
+   
+
+  }
+
+  $.ajax({
+
+    type:'POST',
+    url: $( "form" ).attr( 'action' ),
+    data: $( "form" ).serialize(),
+    success: function (res){
+       window.location.href = '/admin/dashboard';
+    }
+   
+
+  });
+
+  
+ 
+   
+  
+});
+  
+
+
+ 
+
+
+
+
+ $("input").on('input',function(e){
+
+
+  dataEmail = $('input[name=email]').val();
+  dataPass = $('input[name=password]').val();
+
+
+  if(($.trim(dataEmail)) && ($.trim(dataPass))){
+
+    $('label').hide();
+
+   }
+
+
+  
+
+  });
+
+</script>
